--- a/project.config
+++ b/project.config
@@ -4,7 +4,7 @@
 ;; many IDs created, so you should keep it to 3-6 characters.
 $;PROJECT$;=virome
 ;; The root of your project directory, under which should exist the 'workflow' directory
-$;REPOSITORY_ROOT$;=/usr/local/projects/virome
+$;REPOSITORY_ROOT$;=/opt/projects/virome
 ;; This area will be used as temporary space for the project.  It should be cleaned out
 ;;  regularly, usually by some cron job.
 $;TMP_DIR$;=/usr/local/scratch/$;PROJECT$;/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
@@ -14,15 +14,15 @@ $;TMP_DIR$;=/usr/local/scratch/$;PROJECT$;/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;O
 $;PROJECT_CODE$;=general
 ;; All variables below must be full paths - no variable references or tokens.
 ;; This should be the path to the id repository under the 'workflow' directory for your project.
-$;PROJECT_ID_REPOSITORY$;=/usr/local/projects/virome/workflow/project_id_repository
+$;PROJECT_ID_REPOSITORY$;=/opt/projects/virome/workflow/project_id_repository
 ;; The ergatis scripts and libraries should be found here.
-$;ERGATIS_DIR$;=/opt/ergatis
+$;ERGATIS_DIR$;=/opt/package_virome
 ;; Path to the ergatis lib directory, usually under the ERGATIS_DIR
-$;LIB_DIR$;=/opt/ergatis/lib
+$;LIB_DIR$;=/opt/package_virome/lib
 ;; Path to the ergatis bin directory, usually under the ERGATIS_DIR
-$;BIN_DIR$;=/opt/ergatis/bin
+$;BIN_DIR$;=/opt/package_virome/bin
 ;; Path to the ergatis docs directory, usually under the ERGATIS_DIR
-$;DOCS_DIR$;=/opt/ergatis/docs
+$;DOCS_DIR$;=/opt/package_virome/docs
 ;; Turn on pipeline email notification by default. If this flag is set any user creating a pipeline under
 ;; this project will always receive email notifications regarding the pipelines status upon completion or failure
 $;EMAIL_NOTIFICATION$;=0
@@ -32,4 +32,4 @@ $;DEBUG$;=0
 [include]
 ;; Path to the software config file.  It contains the path to the binary for each component as
 ;;  well as common data paths.
-$;SOFTWARE_CONFIG$;=/opt/ergatis/software.config
+$;SOFTWARE_CONFIG$;=/opt/package_virome/software.config
