--- a/virome.software.config
+++ b/virome.software.config
@@ -121,7 +121,7 @@ $;IPRSCAN_EXEC$;=/opt/iprscan/bin/iprscan.sh
 $;CLUSTER_PATH$;=/opt/ergatis/bin/cluster
 
 [component metagene]
-$;METAGENE_EXEC$;=/opt/mga/bin/mga
+$;METAGENE_EXEC$;=/opt/package_virome/software/mga_linux_ia64
 
 [component metagenemark]
 $;METAGENEMARK_EXEC$;=/opt/metagenemark/gmhmmp
@@ -248,7 +248,7 @@ $;TRF_EXEC$;=/usr/local/bin/trf
 $;TRNASCANSE_EXEC$;=/opt/trnascan-se/bin/tRNAscan-SE
 $;TRNASCANSE_INSTALL$;=/opt/trnascan-se
 [component tRNAscan-SE_compress]
-$;TRNASCANSE_EXEC$;=/usr/local/bin/tRNAscan-SE
+;;TRNASCANSE_EXEC$;=/usr/local/bin/tRNAscan-SE
 
 [component velvet_optimiser]
 $;VELVET_INSTALL_DIR$;=/opt/opt-packages/bioinf-v1r4b1/velvet
@@ -361,7 +361,7 @@ $;DBLOAD_UNIREF_LOOKUP_EXEC$;=/opt/ergatis/package_virome/bin/db-load-uniref-loo
 $;DBLOAD_FAMS_EXEC$;=/opt/ergatis/package_virome/bin/db-load-fams
 
 [component cd-hit]
-$;CD_HIT_EXEC$;=/opt/cd-hit/bin/cd-hit
+$;CD_HIT_EXEC$;=/opt/package_virome/software/cd-hit-v4.6.1-2012-08-27/cd-hit
 
 [component derep-blast-output]
 $;DEREP_BLAST_EXEC$;=/opt/ergatis/package_virome/bin/derep-blast-output
@@ -439,19 +439,19 @@ $;VIROMEORF_PREP_EXEC$; = /opt/ergatis/package_virome/bin/viromeorf-prep
 
 ;;Nasko - Custom Components
 [component split_btab]
-$;SPLITBTAB$;=/diag/projects/virome/package_virome/bin/split_btab
+$;SPLITBTAB$;=/opt/package_virome/bin/split_btab
 
 [component btab2viromebtab]
-$;BTAB2VIROMEBTAB$;=/diag/projects/virome/package_virome/bin/btab2viromebtab
+$;BTAB2VIROMEBTAB$;=/opt/package_virome/bin/btab2viromebtab
 
 [component concatenate_files]
-$;CONCATENATE_FILES$;=/diag/projects/virome/package_virome/bin/concatenate_files
+$;CONCATENATE_FILES$;=/opt/package_virome/bin/concatenate_files
 
 [component publish_checkin]
-$;PUBLISH_CHECKIN$;=/diag/projects/virome/package_virome/bin/publish_checkin
+$;PUBLISH_CHECKIN$;=/opt/package_virome/bin/publish_checkin
 
 [component fastq2fastaqual]
-$;FASTQ2FASTAQUAL$;=/diag/projects/virome/package_virome/bin/fastq2fastaqual
+$;FASTQ2FASTAQUAL$;=/opt/package_virome/bin/fastq2fastaqual
 
 [component fasta_size_filter]
 $;FASTA_SIZE_FILTER$;=/opt/ergatis/package_virome/bin/fasta_size_filter
@@ -475,22 +475,22 @@ $;FRAG_GENE_SCAN$;= /diag/scratch/FragGeneScan1.16/FragGeneScan
 $;UPDATE_QUALITY_SCORES$;=/opt/ergatis/package_virome/bin/updateQualityFile
 
 [component archive_virome_pipeline]
-$;ARCHIVE_VIROME_PIPELINE$;=/diag/projects/virome/package_virome/bin/archive_virome_pipeline
+$;ARCHIVE_VIROME_PIPELINE$;=/opt/package_virome/bin/archive_virome_pipeline
 
 [component ncbi-blastp-plus]
-$;BLASTP2226_EXEC$;=/opt/ncbi-blast+/bin/blastp
+$;BLASTP2226_EXEC$;=/opt/package_virome/software/ncbi-blast-2.2.28+/bin/blastp
 
 [component ncbi-blastn-plus]
-$;BLASTN2226_EXEC$;=/opt/ncbi-blast+/bin/blastn
+$;BLASTN2226_EXEC$;=/opt/package_virome/software/ncbi-blast-2.2.28+/bin/blastn
 
 [component reset_db]
-$;RESET_DB$;=/diag/projects/virome/package_virome/bin/reset_db
+$;RESET_DB$;=/opt/package_virome/bin/reset_db
 
 [component dump_db]
-$;DUMP_DB$;=/diag/projects/virome/package_virome/bin/dump_db
+$;DUMP_DB$;=/opt/package_virome/bin/dump_db
 
 [component transfer_checkin]
-$;TRANSFER_CHECKIN$;=/diag/projects/virome/package_virome/bin/transfer_checkin
+$;TRANSFER_CHECKIN$;=/opt/package_virome/bin/transfer_checkin
 
 ;;Khaleel - Custom Components
 [component kmer_freq]
