--- a/virome.minimal/Dockerfile
+++ b/virome.minimal/Dockerfile
@@ -3,9 +3,6 @@
 # Based on Ubuntu
 ############################################################ 
 
-# Docker 1.9.1 currently hangs when attempting to build openjdk-6-jre.
-# Upgrade Docker by installing DockerToolbox-1.10.0-rc3.
-
 FROM ubuntu:trusty
 
 MAINTAINER Tom Emmel <temmel@som.umaryland.edu>
@@ -13,29 +10,14 @@ MAINTAINER Tom Emmel <temmel@som.umaryland.edu>
 #--------------------------------------------------------------------------------
 # SOFTWARE
 
-ENV BMSL_VERSION v2r18b1
-ENV BMSL_DOWNLOAD_URL http://sourceforge.net/projects/bsml/files/bsml/bsml-$BMSL_VERSION/bsml-$BMSL_VERSION.tar.gz
+ARG WORKFLOW_VERSION=3.1.5
+ARG WORKFLOW_DOWNLOAD_URL=http://sourceforge.net/projects/tigr-workflow/files/tigr-workflow/wf-${WORKFLOW_VERSION}.tar.gz
 
-ENV ERGATIS_VERSION v2r19b4
-ENV ERGATIS_DOWNLOAD_URL https://github.com/jorvis/ergatis/archive/$ERGATIS_VERSION.tar.gz
+ARG VIROME_VERSION=1.0
+ARG VIROME_DOWNLOAD_URL=https://github.com/Virome-Collaboration-Group/virome_pipeline/archive/master.zip
 
-ENV WORKFLOW_VERSION 3.1.5
-ENV WORKFLOW_DOWNLOAD_URL http://sourceforge.net/projects/tigr-workflow/files/tigr-workflow/wf-$WORKFLOW_VERSION.tar.gz
-
-ENV VIROME_VERSION 1.0
-ENV VIROME_DOWNLOAD_URL https://github.com/bjaysheel/virome_pipeline/archive/$VIROME_VERSION.tar.gz
-
-ENV CD_HIT_VERSION 4.6.4
-ENV CD_HIT_DOWNLOAD_URL https://github.com/weizhongli/cdhit/archive/V${CD_HIT_VERSION}.tar.gz
-
-ENV MGA_VERSION noversion
-ENV MGA_DOWNLOAD_URL http://metagene.nig.ac.jp/metagene/mga_x86_64.tar.gz
-
-ENV NCBI_BLAST_VERSION 2.3.0
-ENV NCBI_BLAST_DOWNLOAD_URL ftp://ftp.ncbi.nlm.nih.gov/blast/executables/blast+/LATEST/ncbi-blast-${NCBI_BLAST_VERSION}+-x64-linux.tar.gz
-
-ENV TRNASCAN_SE_VERSION 1.3.1
-ENV TRNASCAN_SE_DOWNLOAD_URL http://lowelab.ucsc.edu/software/tRNAscan-SE-${TRNASCAN_SE_VERSION}.tar.gz
+ARG TRNASCAN_SE_VERSION=1.3.1
+ARG TRNASCAN_SE_DOWNLOAD_URL=http://lowelab.ucsc.edu/software/tRNAscan-SE-${TRNASCAN_SE_VERSION}.tar.gz
 
 #--------------------------------------------------------------------------------
 # BASICS
@@ -101,16 +83,17 @@ RUN curl -SL $WORKFLOW_DOWNLOAD_URL -o workflow.tar.gz \
 #--------------------------------------------------------------------------------
 # VIROME -- install in /opt/package_virome
 
-RUN mkdir -p /opt/package_virome
-WORKDIR /opt/package_virome
+RUN mkdir -p /opt/src/virome
+WORKDIR /opt/src/virome
 
 COPY ergatis.install.fix /tmp/.
 COPY virome.ergatis.ini /tmp/.
 COPY virome.software.config /tmp/.
 
-RUN curl -SL $VIROME_DOWNLOAD_URL -o virome.tar.gz \
-	&& tar --strip-components=1 -xvf virome.tar.gz -C /opt/package_virome \
-	&& rm virome.tar.gz \
+RUN curl -SL $VIROME_DOWNLOAD_URL -o virome.zip \
+	&& unzip -o virome.zip \
+	&& rm virome.zip \
+	&& mv /opt/src/virome/virome_pipeline-master /opt/package_virome \
 	&& cd /opt/package_virome/autopipe_package/ergatis \
 	&& cp /tmp/ergatis.install.fix . \
 	&& ./ergatis.install.fix \
@@ -175,17 +158,8 @@ ENV PERL5LIB=/opt/package_virome/autopipe_package/ergatis/lib
 RUN mkdir -p /opt/scripts
 WORKDIR /opt/scripts
 
-COPY virome.path.fix /opt/scripts/.
-RUN chmod 755 /opt/scripts/virome.path.fix
-RUN /opt/scripts/virome.path.fix
-
-COPY virome_454_fasta_unassembled_run_pipeline.pl /opt/scripts/.
-RUN chmod 755 /opt/scripts/virome_454_fasta_unassembled_run_pipeline.pl
-
 COPY wrapper.sh /opt/scripts/wrapper.sh
 RUN chmod 755 /opt/scripts/wrapper.sh
-
-COPY file.fasta /tmp/.
 
 #--------------------------------------------------------------------------------
 # Default Command
