Handle warnings from apt/dpkg.

--- a/virome.minimal/Dockerfile
+++ b/virome.minimal/Dockerfile
@@ -7,6 +7,10 @@ FROM ubuntu:trusty
 
 MAINTAINER Tom Emmel <temmel@som.umaryland.edu>
 
+# Handle warnings from apt/dpkg
+ARG TERM=linux
+ARG DEBIAN_FRONTEND=noninteractive
+
 #--------------------------------------------------------------------------------
 # SOFTWARE
 
