--- a/virome.minimal/virome.software.config
+++ b/virome.minimal/virome.software.config
@@ -248,7 +248,7 @@ $;TRF_EXEC$;=/usr/local/bin/trf
 $;TRNASCANSE_EXEC$;=/opt/trnascan-se/bin/tRNAscan-SE
 $;TRNASCANSE_INSTALL$;=/opt/trnascan-se
 [component tRNAscan-SE_compress]
-;;TRNASCANSE_EXEC$;=/usr/local/bin/tRNAscan-SE
+$;TRNASCANSE_EXEC$;=/opt/trnascan-se/bin/tRNAscan-SE
 
 [component velvet_optimiser]
 $;VELVET_INSTALL_DIR$;=/opt/opt-packages/bioinf-v1r4b1/velvet
