--- a/project.config
+++ b/project.config
@@ -16,13 +16,13 @@ $;PROJECT_CODE$;=general
 ;; This should be the path to the id repository under the 'workflow' directory for your project.
 $;PROJECT_ID_REPOSITORY$;=/opt/projects/virome/workflow/project_id_repository
 ;; The ergatis scripts and libraries should be found here.
-$;ERGATIS_DIR$;=/opt/package_virome
+$;ERGATIS_DIR$;=/opt/ergatis
 ;; Path to the ergatis lib directory, usually under the ERGATIS_DIR
-$;LIB_DIR$;=/opt/package_virome/lib
+$;LIB_DIR$;=/opt/ergatis/lib
 ;; Path to the ergatis bin directory, usually under the ERGATIS_DIR
-$;BIN_DIR$;=/opt/package_virome/bin
+$;BIN_DIR$;=/opt/ergatis/bin
 ;; Path to the ergatis docs directory, usually under the ERGATIS_DIR
-$;DOCS_DIR$;=/opt/package_virome/docs
+$;DOCS_DIR$;=/opt/ergatis/docs
 ;; Turn on pipeline email notification by default. If this flag is set any user creating a pipeline under
 ;; this project will always receive email notifications regarding the pipelines status upon completion or failure
 $;EMAIL_NOTIFICATION$;=0
