Modify Dockerfile -> remove ping and multi apt-get update, set ergatis.ini authentication method to OPEN

--- a/ergatis.ini
+++ b/ergatis.ini
@@ -195,7 +195,7 @@ vappio_data_placement = 0
 ;;             commands as the user logged in
 ;;      ldap - uses ldap to authenticate.  Also requires sudo privileges as for Kerberos
 ;;      ad - uses ldap authentication, specifically using an ActiveDirectory host
-authentication_method = ldap-tls
+authentication_method = open
 
 ;;  only do this one if you're doing kerberos authentication
 ;; kerberos_realm = AUTH.YOURSERVER.EDU
