update location of virome related software.config file

--- a/project.config
+++ b/project.config
@@ -32,4 +32,4 @@ $;DEBUG$;=0
 [include]
 ;; Path to the software config file.  It contains the path to the binary for each component as
 ;;  well as common data paths.
-$;SOFTWARE_CONFIG$;=/opt/package_virome/software.config
+$;SOFTWARE_CONFIG$;=/opt/ergatis/config/virome.software.config
