modified log level

--- a/workflow.log4j.properties
+++ b/workflow.log4j.properties
@@ -1,6 +1,6 @@
 instance=${wf.instance.file}
 file=${instance}.log
-log4j.rootLogger=FINEST#org.tigr.antware.shared.util.Finest, FILE, CON
+log4j.rootLogger=ERROR #org.tigr.antware.shared.util.Finest, FILE, CON
 log4j.appender.FILE=org.apache.log4j.FileAppender
 log4j.appender.FILE.File=${file}
 log4j.appender.FILE.Append=false
